# squobert

./: .gitignore  AGENTS.md  LICENSE  README.md  startup.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml  docker-image.yml
bot/: Dockerfile  README.md  bot.py  build.sh  env.example  face_detector.py  pcc-deploy.toml  pyproject.toml  requirements.txt
bot/.claude/: settings.local.json
bot/processors/: __init__.py  bot_face_processor.py  local_presence_processor.py  presence_frame.py  presence_processor.py  remote_presence_processor.py  script_processor.py  session_frames.py
client/: PRESENCE_INTEGRATION.md  README.md  env.example  package-lock.json  package.json  vite.config.ts
client-old/: README.md  package.json  vite.config.js
client-old/src/components/: ConnectControls.tsx
client/src/: App.css  App.tsx  config.ts
pi/: .Xresources
pi/autostart/: squobertos.desktop
presence/: README.md  detector.py  main.py  pyproject.toml  requirements.txt  server.py
squobertos/: README.md  install.sh  pyproject.toml  squobertos.py  squobertos.service  start.sh  styles.py  test_terminal.py  tester.py  testshape.txt
squobertos/.claude/: settings.local.json
squobertos/assets/: circuit.txt  face.txt
squobertos/scratch/: circuits.txt  squobert-bg-old.txt  squobert_face.txt.bak  testshape.txt
squobertos/screens/: main_menu.py  network.py  settings.py
squobertos/services/: presence.py
squobertos/utils/: __init__.py  audio.py  browser.py  config.py  network.py  terminal_launcher.py
squobertos/widgets/: display.py
(+42 files in other folders)
