[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "aiortc>=1.14.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pipecat-ai-small-webrtc-prebuilt>=1.0.0",
    "pipecat-ai-tail>=0.0.1",
    "pipecat-ai[cartesia,daily,deepgram,google,local-smart-turn-v3,openai,silero,webrtc]>=0.0.89",
    "pipecatcloud>=0.2.6",
    "python-dotenv~=1.0.1",
]
