[project]
name = "squobertos"
version = "0.1.0"
description = "SquobertOS - A TUI interface for Squobert"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.47.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "loguru>=0.7.0",
    "tomli-w>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
